"Fixed" the gurobi bug again

--- a/testailu.ipynb
+++ b/testailu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\devel\\anaconda3\\envs\\desdeo2\\Lib\\site-packages\\pydantic\\_internal\\_config.py:334: UserWarning: Valid config keys have changed in V2:\n",
+      "* 'allow_population_by_field_name' has been renamed to 'populate_by_name'\n",
+      "  warnings.warn(message, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from desdeo.utopia_stuff.utopia_problem import utopia_problem\n",
@@ -24,13 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2025-02-22\n",
       "Gurobi Optimizer version 11.0.2 build v11.0.2rc0 (win64 - Windows 10.0 (19045.2))\n",
       "\n",
       "CPU model: 12th Gen Intel(R) Core(TM) i5-1245U, instruction set [SSE2|AVX|AVX2]\n",
@@ -77,7 +89,7 @@
       "\n",
       "User MIP start did not produce a new incumbent solution\n",
       "User MIP start violates constraint x_con_1 by 1.000000000\n",
-      "MIP start from previous solve produced solution with objective -1614.29 (0.01s)\n",
+      "MIP start from previous solve produced solution with objective -1614.29 (0.02s)\n",
       "Loaded MIP start from previous solve with objective -1614.29\n",
       "\n",
       "Presolve removed 17 rows and 173 columns\n",
@@ -144,7 +156,7 @@
       "\n",
       "Found heuristic solution: objective 4.3468518\n",
       "Presolve removed 9 rows and 125 columns\n",
-      "Presolve time: 0.00s\n",
+      "Presolve time: 0.02s\n",
       "Presolved: 11 rows, 49 columns, 173 nonzeros\n",
       "Variable types: 4 continuous, 45 integer (45 binary)\n",
       "\n",
@@ -170,7 +182,7 @@
       "  StrongCG: 1\n",
       "  Inf proof: 2\n",
       "\n",
-      "Explored 1 nodes (36 simplex iterations) in 0.06 seconds (0.00 work units)\n",
+      "Explored 1 nodes (36 simplex iterations) in 0.05 seconds (0.00 work units)\n",
       "Thread count was 12 (of 12 available processors)\n",
       "\n",
       "Solution count 6: 0.342527 0.344536 0.345186 ... 4.34685\n",
@@ -187,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +224,7 @@
        " Variable(name='V_end', symbol='V_end', variable_type=<VariableTypeEnum.real: 'real'>, lowerbound=None, upperbound=None, initial_value=None)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +244,7 @@
        "SolverResults(optimal_variables={'X_1': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_2': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_3': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_4': [0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_5': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_6': [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0], 'X_7': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_8': [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_9': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_10': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_11': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_12': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'X_13': [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], 'P_1': 0.0, 'P_2': 11550.6197518798, 'P_3': 10979.96240220874, 'V_end': 35215.757006547276, '_alpha': 0.3425337968165792}, optimal_objectives={'f_1': 47218.46001152127, 'f_2': 1811.6699537845882, 'f_3': 12002.703004973995}, constraint_values={'x_con_1': -0.0, 'x_con_2': -0.0, 'x_con_3': -0.0, 'x_con_4': -0.0, 'x_con_5': -0.0, 'x_con_6': -0.0, 'x_con_7': -0.0, 'x_con_8': -0.0, 'x_con_9': -0.0, 'x_con_10': -0.0, 'x_con_11': -0.0, 'x_con_12': -0.0, 'x_con_13': -0.0, 'v_con': -1.4551915228366852e-11, 'p1_con': -0.0, 'p2_con': -0.0, 'p3_con': -0.0, 'f_1_con': -0.25328292846527933, 'f_2_con': -0.003919016749868609, 'f_3_con': 1.1102230246251565e-16}, success=True, message=\"Gurobipy solver status is: 'Optimal solution found.'\")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +376,7 @@
        " 'X_13': {'2025': 0, '2030': 0, '2035': 0}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,21 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'P_1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 174\u001b[0m\n\u001b[0;32m    172\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m key\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m    173\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[1;32m--> 174\u001b[0m stand \u001b[38;5;241m=\u001b[39m \u001b[43mschedule_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munit\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m    175\u001b[0m treatment_id \u001b[38;5;241m=\u001b[39m treatments_dict[key][selectedYear]\n\u001b[0;32m    176\u001b[0m option[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvisualMap\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpieces\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(\n\u001b[0;32m    177\u001b[0m     {\n\u001b[0;32m    178\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m: treatment_id,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    182\u001b[0m     }\n\u001b[0;32m    183\u001b[0m )\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'P_1'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "option = {\n",
     "    # // This can be used to show any picture behind the map, including an aerial image\n",
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,21 +613,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'start_result' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m decision_variables \u001b[38;5;241m=\u001b[39m \u001b[43mstart_result\u001b[49m\u001b[38;5;241m.\u001b[39moptimal_variables\n\u001b[0;32m      2\u001b[0m map_description \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTuotto hakkuista ensimmäisellä ajanjaksolla on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(decision_variables[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP_1\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m€. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTuotto hakkuista toisella ajanjaksolla on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(decision_variables[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP_2\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m€. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTuotto hakkuista kolmannella ajanjaksolla on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(decision_variables[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP_3\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m€. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMetsän diskontattu arvo suunnittelujakson lopussa on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mint\u001b[39m(decision_variables[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mV_end\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m€.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      7\u001b[0m     )\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'start_result' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "decision_variables = start_result.optimal_variables\n",
     "map_description = (\n",
@@ -640,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -649,13 +637,33 @@
        "'donothing'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "foo['X_1'][str(0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Tuotto hakkuista ensimmäisellä ajanjaksolla on 0€. Tuotto hakkuista toisella ajanjaksolla on 11550€. Tuotto hakkuista kolmannella ajanjaksolla on 10979€. Metsän diskontattu arvo suunnittelujakson lopussa on 35215€.'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map_description"
    ]
   }
  ],
