--- a/docs/howtoguides/how_to_define_a_problem.ipynb
+++ b/docs/howtoguides/how_to_define_a_problem.ipynb
@@ -260,10 +260,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: write about objective functions.\n",
+    "The `name` and `symbol` attributes play the same role as in the case of\n",
+    "variables and constants. The attribute `unit` on the other hand is used to\n",
+    "indicate the units of the value represented by the objective function, e.g.,\n",
+    "\"euros\" in the case of the `cost`.\n",
+    "\n",
+    "More importantly, we notice the new attribute `func`, which is used to provide\n",
+    "the functional representation of the objective function. The may be readily\n",
+    "written out using a string representation. We can write the functions as we\n",
+    "would write them in Python, and we can refer to variables and constants using\n",
+    "their respective `symbol` values (we may refer in practice to any element of the\n",
+    "problem with a defined `symbol` attribute!). We may also access the elements of\n",
+    "tensor variables by using brackets (`[]`), as is done in the case of the\n",
+    "variable `y`. Notice that indexing starts at 1. Also worth noting is that, apart\n",
+    "from basic operations, such as multiplication (`*`) and addition (`+`), other\n",
+    "operations are also available, such as the absolute value function (`Abs()`)\n",
+    "used in the function expression for `emission`.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Note:</b> When accessing multidimensional variables or constants, such as\n",
+    "vectors or other tensors, indexing starts at 1.\n",
+    "</div>\n",
+    "\n",
+    "The `objective_type` attribute is also important. It is used to indicate the\n",
+    "type of objective function. In the case of this example, each objective is\n",
+    "analytical (or analytic), which in DESDEO, meant that the objective function can\n",
+    "be represented by writing down its mathematical definition. Notice that in\n",
+    "DESDEO this does not mean that the function is infinitely differentiable! There\n",
+    "are also other types of objective functions, which are covered it other\n",
+    "examples.\n",
+    "\n",
+    "Next, we have the attribute `maximize`, which is used to indicate whether the\n",
+    "objective function is to be maximized (`True`) or minimized (`False`). If not\n",
+    "explicitly defined, objective functions are assumed to be minimized in DESDEO by\n",
+    "default. Finally, we have the attributes `is_convex`, `is_linear`, and\n",
+    "`is_twice_differentiable`, which indicate whether the objective function is\n",
+    "convex, linear, and/or twice differentiable, respectively. This information is\n",
+    "important when choosing (either manually or automatically, e.g., when solving\n",
+    "the multiobjective optimization problem) an adequate solver.\n",
+    "\n",
     "\n",
     "## Constraints\n",
-    "TODO: constraint intro"
+    "Before our problem definition can be completed, we still need to define its\n",
+    "constraints. This is done very similarly to how objective functions were\n",
+    "defined, using the `Constraints` class:"
    ]
   },
   {
@@ -309,10 +349,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: constraint explanations.\n",
+    "We quickly notice that the constraints functions for the fuel efficiency and the\n",
+    "safety rating are not exactly as in the definition. This is because in DESDEO,\n",
+    "constraints are always assumed to be in a standard form. This means that any\n",
+    "inequality constraint should follow the form $g(...) \\leq 0$, and equality\n",
+    "constraint the form $h(...) = 0$. In other words, all the terms of the\n",
+    "constraint should be moved to its left hand side so that the right hand belongs\n",
+    "zero. This is what has been done in the above code for the two inequality\n",
+    "constraints of the problem. Notice also the attribute `cons_type`, which is used\n",
+    "to indicate the type of the constraint: `ConstraintTypeEnum.LTE` or `\"LTE\"` for\n",
+    "an inequality constraint (less than or equal), and `ConstraintTypeEnum.EQ` or\n",
+    "`\"EQ\"` for an equality constraint. \n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "<b>Note:</b> Then defining constraint, it is assumed that the provided <tt>func</tt>\n",
+    "attribute will evaluate to a negative number when the constraint holds, and to a\n",
+    "positive one when it is breached.\n",
+    "</div>\n",
     "\n",
     "## Problem\n",
-    "TODO: Problem intro\n"
+    "We have now defined all the components that make up the vehicle design problem.\n",
+    "What remains is to collect all these components and define the multiobjective\n",
+    "optimization problem in DESDEO. To achieve this, we use the `Problem` class:\n"
    ]
   },
   {
@@ -337,13 +395,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: problem explanation."
+    "After providing the `name` and the `description` of the problem, we provide the\n",
+    "`variables`, `constants`, `objectives`, and `constraints` of the problem as\n",
+    "lists. And that is it, we are done. We can now utilize the problem\n",
+    "`vehicle_design_problem` elsewhere in DESDEO with functionalities and tools that\n",
+    "require an instance of the `Problem` class. For example, we may solve it using\n",
+    "any of the interactive methods available in DESDEO.  \n",
+    "Examples on how the defined problem may be utilized and solved in DESDEO, are\n",
+    "given in other examples."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
