--- a/docs/howtoguides/how_to_define_a_problem.ipynb
+++ b/docs/howtoguides/how_to_define_a_problem.ipynb
@@ -97,13 +97,15 @@
     "guess of an optimal solution, or can make use of such information by other\n",
     "means.\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Note:</b> We will see the `symbol` attribute later in almost all components\n",
+    "<div class=\"admonition note\">\n",
+    "<p class=\"admonition-title\">Note</p>\n",
+    "<p> We will see the `symbol` attribute later in almost all components\n",
     "defining a problem. It is an important identifier that can be used in many\n",
     "different places in DESDEO to specify on what parts of a multiobjective\n",
     "optimization problem to perform various operations. In each problem definition\n",
     "in DESDEO, the `symbol` attribute is assumed to be unique across <b>all</b> the\n",
     "components of the problem.\n",
+    "</p>\n",
     "</div>\n",
     "\n",
     "## Tensor and vector variables\n",
@@ -152,9 +154,11 @@
     "case of this example, since (as seen later) we utilize the `TensorVariable` as\n",
     "convenient way to represent multiple variables using one single Python object.\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Note:</b> `TensorVariable` becomes\n",
-    "very useful when defining problems with a lot of binary variables.\n",
+    "<div class=\"admonition note\">\n",
+    "<p class=\"admonition-title\">Note</p>\n",
+    "<p>`TensorVariable` becomes\n",
+    "very useful when defining problems with, e.g., a lot of binary variables.\n",
+    "</p>\n",
     "</div>\n",
     "\n",
     "Additionally, we see that the the attributes `lowerbounds`, `upperbounds`, and\n",
@@ -277,9 +281,10 @@
     "operations are also available, such as the absolute value function (`Abs()`)\n",
     "used in the function expression for `emission`.\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Note:</b> When accessing multidimensional variables or constants, such as\n",
-    "vectors or other tensors, indexing starts at 1.\n",
+    "<div class=\"admonition note\">\n",
+    "<p class=\"admonition-title\">Note</p>\n",
+    "<p> When accessing multidimensional variables or constants, such as\n",
+    "vectors or other tensors, indexing starts at 1.</p>\n",
     "</div>\n",
     "\n",
     "The `objective_type` attribute is also important. It is used to indicate the\n",
@@ -361,10 +366,12 @@
     "an inequality constraint (less than or equal), and `ConstraintTypeEnum.EQ` or\n",
     "`\"EQ\"` for an equality constraint. \n",
     "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Note:</b> Then defining constraint, it is assumed that the provided <tt>func</tt>\n",
+    "<div class=\"admonition note\">\n",
+    "<p class=\"admonition-title\">Note</p>\n",
+    "<p>Then defining constraint, it is assumed that the provided <tt>func</tt>\n",
     "attribute will evaluate to a negative number when the constraint holds, and to a\n",
     "positive one when it is breached.\n",
+    "</p>\n",
     "</div>\n",
     "\n",
     "## Problem\n",
