admonitions changed to tag style, macros.py is no longer used in problem_format.ipynb instead all code is executed in last cell and output is copy-pasted to desired segments

--- a/docs/explanation/scalarization.ipynb
+++ b/docs/explanation/scalarization.ipynb
@@ -12,7 +12,7 @@
     "optimization problem into a single-objective optimization\n",
     "problem, which can be solved with one of the many existing\n",
     "optimizers. DESDEO has interfaces to existing\n",
-    "optimizers, which are discussed in the section [Solvers](./solvers.md).\n",
+    "optimizers, which are discussed in the section [Solvers](./solvers.ipynb).\n",
     "\n",
     "Here, we will first explain how scalarization is implemented in DESDEO\n",
     "in the section [Scalarizing problems](#scalarizing-problems),\n",
@@ -48,11 +48,16 @@
     "This naturally means that scalarizations should be added to a problem _before_\n",
     "they are evaluated and solved.\n",
     "\n",
-    "!!! note\n",
+    "<div class=\"admonition note\">\n",
+    "<p class=\"admonition-title\">Note</p>\n",
+    "<p>\n",
     "    Scalarization functions assume that each objective function is to be minimized.\n",
     "    This should be reflected in any other values that depend on whether an objective\n",
     "    is to be maximized or minimized, such as the ideal and nadir points, or a \n",
     "    reference point!\n",
+    "</p>\n",
+    "</div>\n",
+    "    \n",
     "\n",
     "## Scalarization examples\n",
     "\n",
@@ -120,12 +125,16 @@
     "scalarized problem would otherwise be differentiable, we lose this property if we\n",
     "use a non-differentiable scalarization function.\n",
     "\n",
-    "!!! warning\n",
+    "<div class=\"admonition note\">\n",
+    "<p class=\"admonition-title\">Warning</p>\n",
+    "<p>\n",
     "    When adding scalarization functions to problems, be mindful of the mathematical\n",
     "    properties of the functions defined in the problem (e.g., the objective functions\n",
     "    and constraints) and those of the scalarization function itself. Using an improper\n",
     "    scalarization can lead to a scalarized problem that has lost some \"nice\"\n",
     "    properties of the original problem, such as differentiability.\n",
+    "</p>\n",
+    "</div>\n",
     "\n",
     "### The epsilon-constraints scalarization\n",
     "\n",
@@ -193,7 +202,7 @@
     "You can study the available scalarization functions found in the\n",
     "[scalarization module][desdeo.tools.scalarization]. If you are interested\n",
     "in how a scalarized problem can be solved, you can proceed to the\n",
-    "section [Solvers](./solvers.md)."
+    "section [Solvers](./solvers.ipynb)."
    ]
   }
  ],
@@ -204,7 +213,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.9"
   }
  },
