--- a/docs/explanation/scalarization_methods.ipynb
+++ b/docs/explanation/scalarization_methods.ipynb
@@ -102,10 +102,15 @@
     "which scalarization functions should be optimized. In the ASF example, `delta` and `rho` are optional parameters of the\n",
     "scalarization function. The number of parameters found in scalarization functions varies.\n",
     "\n",
-    "!!! Note\n",
+    "<div class=\"admonition note\">\n",
+    "<p class=\"admonition-title\">Note</p>\n",
+    "<p>\n",
     "    When creating scalarization functions of any kind, the `tag` argument is very important because it is used\n",
     "    to specify to solvers which scalarization functions should be optimized. The `tag` must be unique inside\n",
     "    the instance of probelm, i.e., no other field of a `problem` dataclass should share the same symbol.\n",
+    "</p>\n",
+    "</div>\n",
+    "\n",
     "\n",
     "To solve the scalarization function, we can use of the solver. For instance, the `scipy_solver` can utilize the\n",
     "minimizer routine defined in `scipy.optimize.minimize`. To solve the problem utilizing `scipy_solver`, we do:"
