--- a/docs/explanation/solvers.ipynb
+++ b/docs/explanation/solvers.ipynb
@@ -19,7 +19,7 @@
     "## Solver interfaces\n",
     "\n",
     "The solver interfaces rely internally heavily on the evaluators discussed\n",
-    "in the section [Parsing and evaluating](./parsing_and_evaluating.md). It is\n",
+    "in the section [Parsing and evaluating](./parsing_and_evaluating.ipynb). It is\n",
     "the evaluators that make sure the `Problem` being solved is in a format that\n",
     "can be evaluated by a solver. The solver interfaces discussed here are\n",
     "in charge of making sure that when an outside solver evaluates a problem, the information\n",
@@ -82,7 +82,7 @@
     "in the example, if `f_1` was to be maximized instead, we should have called `solve` with the argument `f_1_min`.\n",
     "The results contained in SolverResults will then correspond to the original maximized function `f_1`. It is\n",
     "the jobs of the evaluators to make sure that `f_1_min` is available. Likewise, if we have\n",
-    "[Scalarized](./scalarization.md) the problem, we can give the solver the symbol of the added\n",
+    "[Scalarized](./scalarization.ipynb) the problem, we can give the solver the symbol of the added\n",
     "scalarization function.\n",
     "\n",
     "Likewise for [ScipyDeSolver][desdeo.tools.scipy_solver_interfaces.ScipyDeSolver] utilizing\n",
@@ -112,8 +112,12 @@
    "id": "fe6b5942",
    "metadata": {},
    "source": [
-    "!!! note\n",
+    "<div class=\"admonition note\">\n",
+    "<p class=\"admonition-title\">Note</p>\n",
+    "<p>\n",
     "    Whichever function we request a solver to optimize, it will be minimized.\n",
+    "</p>\n",
+    "</div>\n",
     "\n",
     "### Proximal solver\n",
     "\n",
