--- a/docs/explanation/problem_format.ipynb
+++ b/docs/explanation/problem_format.ipynb
@@ -204,7 +204,9 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
     "\n",
@@ -216,7 +218,14 @@
     "\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "</br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eafc74e4",
+   "metadata": {},
+   "source": [
     "\n",
     "### TensorConstant\n",
     "\n",
@@ -241,7 +250,7 @@
     "      \"anyOf\": [\n",
     "        {\n",
     "          \"items\": {\n",
-    "            \"$ref\": \"#/$defs/Tensor\"\n",
+    "            \"$ref\": \"/$defs/Tensor\"\n",
     "          },\n",
     "          \"type\": \"array\"\n",
     "        },\n",
@@ -304,7 +313,7 @@
     "      \"type\": \"array\"\n",
     "    },\n",
     "    \"values\": {\n",
-    "      \"$ref\": \"#/$defs/Tensor\",\n",
+    "      \"$ref\": \"/$defs/Tensor\",\n",
     "      \"description\": \"A list of lists, with the elements representing the values of each constant element in the tensor. E.g., `[[5, 22, 0], [14, 5, 44]]`.\"\n",
     "    }\n",
     "  },\n",
@@ -322,10 +331,11 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
-    "\n",
     "{\n",
     "  \"name\": \"tensor constant example\",\n",
     "  \"symbol\": \"t_c\",\n",
@@ -341,6 +351,15 @@
     "\n",
     "```\n",
     "</details>\n",
+    "</br>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ba574d0",
+   "metadata": {},
+   "source": [
     "\n",
     "### Variable\n",
     "\n",
@@ -385,7 +404,7 @@
     "      \"type\": \"string\"\n",
     "    },\n",
     "    \"variable_type\": {\n",
-    "      \"$ref\": \"#/$defs/VariableTypeEnum\",\n",
+    "      \"$ref\": \"/$defs/VariableTypeEnum\",\n",
     "      \"description\": \"Type of the variable. Can be real, integer or binary.\"\n",
     "    },\n",
     "    \"lowerbound\": {\n",
@@ -459,7 +478,9 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
     "\n",
@@ -474,6 +495,7 @@
     "\n",
     "```\n",
     "</details>\n",
+    "</br>\n",
     "\n",
     "### TensorVariable\n",
     "\n",
@@ -503,7 +525,7 @@
     "      \"anyOf\": [\n",
     "        {\n",
     "          \"items\": {\n",
-    "            \"$ref\": \"#/$defs/Tensor\"\n",
+    "            \"$ref\": \"/$defs/Tensor\"\n",
     "          },\n",
     "          \"type\": \"array\"\n",
     "        },\n",
@@ -568,7 +590,7 @@
     "      \"type\": \"string\"\n",
     "    },\n",
     "    \"variable_type\": {\n",
-    "      \"$ref\": \"#/$defs/VariableTypeEnum\",\n",
+    "      \"$ref\": \"/$defs/VariableTypeEnum\",\n",
     "      \"description\": \"Type of the variable. Can be real, integer, or binary. Note that each element of a TensorVariable is assumed to be of the same type.\"\n",
     "    },\n",
     "    \"shape\": {\n",
@@ -582,7 +604,7 @@
     "    \"lowerbounds\": {\n",
     "      \"anyOf\": [\n",
     "        {\n",
-    "          \"$ref\": \"#/$defs/Tensor\"\n",
+    "          \"$ref\": \"/$defs/Tensor\"\n",
     "        },\n",
     "        {\n",
     "          \"type\": \"null\"\n",
@@ -594,7 +616,7 @@
     "    \"upperbounds\": {\n",
     "      \"anyOf\": [\n",
     "        {\n",
-    "          \"$ref\": \"#/$defs/Tensor\"\n",
+    "          \"$ref\": \"/$defs/Tensor\"\n",
     "        },\n",
     "        {\n",
     "          \"type\": \"number\"\n",
@@ -616,7 +638,7 @@
     "    \"initial_values\": {\n",
     "      \"anyOf\": [\n",
     "        {\n",
-    "          \"$ref\": \"#/$defs/Tensor\"\n",
+    "          \"$ref\": \"/$defs/Tensor\"\n",
     "        },\n",
     "        {\n",
     "          \"type\": \"number\"\n",
@@ -650,7 +672,9 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
     "\n",
@@ -683,6 +707,14 @@
     "\n",
     "```\n",
     "</details>\n",
+    "</br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de743e47",
+   "metadata": {},
+   "source": [
     "\n",
     "### Objective\n",
     "\n",
@@ -829,7 +861,7 @@
     "      \"title\": \"Nadir\"\n",
     "    },\n",
     "    \"objective_type\": {\n",
-    "      \"$ref\": \"#/$defs/ObjectiveTypeEnum\",\n",
+    "      \"$ref\": \"/$defs/ObjectiveTypeEnum\",\n",
     "      \"default\": \"analytical\",\n",
     "      \"description\": \"The type of objective function. 'analytical' means the objective function value is calculated based on 'func'. 'data_based' means the objective function value should be retrieved from a table. In case of 'data_based' objective function, the 'func' field is ignored. Defaults to 'analytical'.\"\n",
     "    },\n",
@@ -880,7 +912,9 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
     "\n",
@@ -906,8 +940,16 @@
     "}\n",
     "\n",
     "```\n",
+    "</br>\n",
     "</details>\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a76e09f1",
+   "metadata": {},
+   "source": [
     "\n",
     "### Constraint\n",
     "\n",
@@ -963,7 +1005,7 @@
     "      \"type\": \"string\"\n",
     "    },\n",
     "    \"cons_type\": {\n",
-    "      \"$ref\": \"#/$defs/ConstraintTypeEnum\",\n",
+    "      \"$ref\": \"/$defs/ConstraintTypeEnum\",\n",
     "      \"description\": \"The type of the constraint. Constraints are assumed to be in a standard form where the supplied 'func' expression is on the left hand side of the constraint's expression, and on the right hand side a zero value is assume. The comparison between the left hand side and right hand side is either and quality comparison ('=') or lesser than equal comparison ('<=').\"\n",
     "    },\n",
     "    \"func\": {\n",
@@ -1059,7 +1101,9 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
     "\n",
@@ -1085,7 +1129,15 @@
     "\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "</br>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a3e456d",
+   "metadata": {},
+   "source": [
     "\n",
     "### ExtraFunction\n",
     "\n",
@@ -1206,7 +1258,9 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
     "\n",
@@ -1228,10 +1282,17 @@
     "\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "</br>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5652ee26",
+   "metadata": {},
+   "source": [
     "\n",
     "### ScalarizationFunction\n",
-    "\n",
     "\n",
     "The `ScalarizationFunction` model defines any scalarizations of the problem being solved. The scalarization\n",
     "function has the fields `name`, `symbol` and `func`. The fields `name` and `symbol` represent the function's\n",
@@ -1314,7 +1375,9 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
     "\n",
@@ -1334,7 +1397,7 @@
     "\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "</br>\n",
     "\n",
     "### DiscreteRepresentation\n",
     "\n",
@@ -1411,7 +1474,9 @@
     "</details></br>\n",
     "and an example of the JSON object corresponding to the schema looks like:\n",
     "\n",
-    "</br><details><summary><b>Click to expand</b></summary>\n",
+    "</br>\n",
+    "<details>\n",
+    "<summary><b>Click to expand</b></summary>\n",
     "\n",
     "```json\n",
     "\n",
@@ -1431,7 +1496,14 @@
     "\n",
     "```\n",
     "</details>\n",
-    "\n",
+    "</br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa851c8f",
+   "metadata": {},
+   "source": [
     "\n",
     "## Symbols and expressions\n",
     "\n",
@@ -1549,10 +1621,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8692e49b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfor model_type, instance in problem_parts_list:\\n    print(\"----------------------------------------------  \" + model_type.__name__ + \"  ----------------------------------------------\\n\")\\n\\n    print(\"<details>\\n<summary><b>Click to expand</b></summary>\\n\\n```json\\n\")\\n    print(json.dumps(model_type.model_json_schema(), indent=2))\\n    print(\"\\n```\\n</details></br>\\nand an example of the JSON object corresponding to the schema looks like:\\n\\n\"     \"</br><details><summary><b>Click to expand</b></summary>\\n\\n```json\\n\")\\n    print(instance.model_dump_json(indent=2))\\n    print(\"\\n```\\n</details>\\n\\n\")\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# these code blocks and outputs are hidden with the the tag 'hide_code' It might\n",
     "# be better to have this code block all the way at the end of the file and\n",
@@ -1652,7 +1739,7 @@
     "    [DiscreteRepresentation, discreteRepresentation]\n",
     "]\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "for model_type, instance in problem_parts_list:\n",
     "    print(\"----------------------------------------------  \" + model_type.__name__ + \"  ----------------------------------------------\\n\")\n",
     "    \n",
@@ -1661,13 +1748,14 @@
     "    print(\"\\n```\\n</details></br>\\nand an example of the JSON object corresponding to the schema looks like:\\n\\n\" \\\n",
     "    \"</br><details><summary><b>Click to expand</b></summary>\\n\\n```json\\n\")\n",
     "    print(instance.model_dump_json(indent=2))\n",
-    "    print(\"\\n```\\n</details>\\n\\n\")\n"
+    "    print(\"\\n```\\n</details>\\n\\n\")\n",
+    "\"\"\""
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "desdeo",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1681,7 +1769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
