--- a/docs/howtoguides/how_to_define_a_problem.ipynb
+++ b/docs/howtoguides/how_to_define_a_problem.ipynb
@@ -27,7 +27,7 @@
     "must be greater or equal than 2, and not exceed the value 24. In addition, when\n",
     "calculating performance, there is an ideal number of cylinders $IC=8$. Deviating\n",
     "from this value will result in a performance penalty.  Finally, the composition\n",
-    "percentages must sum to 100$, i.e., $y_1 + y_2 = 100$.\n",
+    "percentages must sum to $100$, i.e., $y_1 + y_2 = 100$.\n",
     "\n",
     "With some mock functions, we can define the vehicle design problem as follows:\n",
     "\n",
